add views, model changes, urls, registration

--- a/visits/templates/visits/visit_detail.html
+++ b/visits/templates/visits/visit_detail.html
@@ -1,5 +1,6 @@
 <a href="{% url 'index' %}">View all visits</a>
 <h1>Visit #{{ visit.id }}</h1>
+<p><a href="{% url 'edit' visit.id %}">Edit this visit</a></p>
 <label>Date: {{ visit.date|date }}</label><br/>
 <label>
     Provider{{ visit.provider_set.count|pluralize }}:
@@ -7,6 +8,11 @@
     {{ p }}{% if visit.provider_set.count > 1 %}, {% endif %}
     {% endfor %}
 </label><br/>
+
 <label>Location: {{ visit.location }}</label><br/><br/>
+
 Notes: <p>{{ visit.notes }}</p>
 
+{% for image in visit.get_images %}
+<img src="{{ image.url }}"/>
+{% endfor %}
