--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,3 +1,6 @@
 <table>
-{{ form.as_table }}
+    <form method="post">{% csrf_token %}
+        {{ form.as_table }}
+        <tr><th><input type="submit" name="submit" value="create"></th></tr>
+    </form>
 </table>
